--- a/20230202_Natural_disaster.Rmd
+++ b/20230202_Natural_disaster.Rmd
@@ -17,17 +17,10 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, fig.width = 6,fig.asp = 0.8, fig.align = 'center', out.width = "60%")
 ```
 
-## Introduction
+## Background
 
 Climate change is one of the biggest challenges facing humanity today resulting in more frequent and severe weather events, rising sea levels, and changes in the amount and pattern of precipitation, to harm to ecosystems, and human health. The Federal Emergency Management Agency (FEMA) is part of Homeland Security in the USA and responsible for coordinating the response to disasters and emergencies, both natural and man-made. FEMA provides support to state and local governments, as well as to individuals affected by disasters, by offering financial assistance, providing temporary housing, and assisting with recovery efforts. The agency also plays a key role in disaster preparedness and risk reduction through programs that help communities develop plans and take steps to reduce the impact of future disasters.
 
-FEMA provides various data sets on disasters that occurred in the past, some of them going back to the 1960s. For our project we used two data sets from FEMA, one with a focus on the type of disaster and one containing information on for example how much damage the disaster caused. Furthermore, enriched these data sets with geographical information on the county level and information on for example population per county. 
-
-With the combination of all of this information, we aimed to find answers to the following questions:
-
-1. ...
-2. ...
-3. ...
 
 ```{r LIBRARIES, include=FALSE}
 library(readxl)
@@ -37,6 +30,17 @@ library(tidyr)
 library(tidyverse)
 library(rvest)
 ```
+
+##Description of data set(s)
+
+FEMA provides various data sets on disasters that occurred in the past, some of them going back to the 1960s. For our project we used two data sets from FEMA, one with a focus on the type of disaster and one containing information on for example how much damage the disaster caused. Furthermore, enriched these data sets with geographical information on the county level and information on for example population per county. 
+
+With the combination of all of this information, we aimed to find answers to the following questions:
+
+1. ...
+2. ...
+3. ...
+
 
 ```{r LOAD, include=FALSE}
 ##Reading data tables from directory
