--- a/20230202_Natural_disaster.Rmd
+++ b/20230202_Natural_disaster.Rmd
@@ -17,7 +17,7 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, fig.width = 6,fig.asp = 0.8, fig.align = 'center', out.width = "60%")
 ```
 
-## Background
+##Background
 
 Climate change is one of the biggest challenges facing humanity today resulting in more frequent and severe weather events, rising sea levels, and changes in the amount and pattern of precipitation, to harm to ecosystems, and human health. The Federal Emergency Management Agency (FEMA) is part of Homeland Security in the USA and responsible for coordinating the response to disasters and emergencies, both natural and man-made. FEMA provides support to state and local governments, as well as to individuals affected by disasters, by offering financial assistance, providing temporary housing, and assisting with recovery efforts. The agency also plays a key role in disaster preparedness and risk reduction through programs that help communities develop plans and take steps to reduce the impact of future disasters.
 
@@ -29,17 +29,13 @@ library(dplyr)
 library(tidyr)
 library(tidyverse)
 library(rvest)
+library(ggplot2)
+library(plotly)
 ```
 
 ##Description of data set(s)
 
-FEMA provides various data sets on disasters that occurred in the past, some of them going back to the 1960s. For our project we used two data sets from FEMA, one with a focus on the type of disaster and one containing information on for example how much damage the disaster caused. Furthermore, enriched these data sets with geographical information on the county level and information on for example population per county. 
-
-With the combination of all of this information, we aimed to find answers to the following questions:
-
-1. ...
-2. ...
-3. ...
+FEMA provides various data sets on disasters that occurred in the past, some of them going back to the 1960s. For our project we merged two data sets from FEMA and enriched them with additional information like geographical data (e.g. longitude, latitude) and population size per state from Wikipedia. The first data set from FEMA contained among other information on the type of disaster (fire, flooding, etc.), the state in which the disaster occurred and the dates when it occurred. From the second data set, we pulled information on the amount of damage each disaster measured in amount of money. Since the second data set only goes back to 2002, we decided to do our analysis in the time frame of the past 20 years. 
 
 
 ```{r LOAD, include=FALSE}
@@ -147,9 +143,33 @@ df.prep.4 <- df.prep.3[,c("disasterNumber","incidentType","designatedArea", "sta
 
 df.prep.5 <- df.prep.4
 colnames(df.prep.5) <- c("Disaster#", "Type", "County", "State", "Latitude",
-                                "Longitude", "Damage$", "Approved$",
-                                "Repair$", "Population", "IncomeCapita", "DisasterBegin",
+                                "Longitude", "Damage", "Approved",
+                                "Repair", "Population", "IncomeCapita", "DisasterBegin",
                                 "DisasterEnd", "Duration")
 ```
 
+After merging and cleaning the data from the four sources, our final data set to do the analysis on looked like this: 
 
+``` {r VIEW}
+knitr::kable(head(df.prep.5))
+```
+
+##Exploratory Data Analysis
+
+```{r EDA}
+
+#Bar chart for the type of disaster in percentages
+type <- as.factor(df.prep.5$Type)
+
+disastertype_bar <- ggplot(df.prep.5, aes(x= "", fill = type)) +
+  geom_bar(position="fill")  + labs(x = " ", y = "Frequency of disaster type")
+disastertype_bar + scale_fill_brewer(name = "Disaster Type", palette ="Spectral") 
+
+#ggplotly(disastertype_bar)
+```
+
+##Chapter of choice
+
+##Chapter of choice (Martina)
+
+##Conclusions
