--- a/20230202_Natural_disaster_v2.Rmd
+++ b/20230202_Natural_disaster_v2.Rmd
@@ -55,6 +55,9 @@ library(ggiraph)
 library(ggpubr)
 library(MVA)
 library(cluster)
+library(ggtext)
+
+
 ```
 
 ## Description of data set(s)
@@ -311,7 +314,10 @@ ggplot() +
   coord_quickmap() +
   scale_fill_gradient(limits = c(min(map_dam$damage2), max(map_dam$damage2)),
                       breaks = c(min(map_dam$damage2), max(map_dam$damage2)),
-                      labels = c("Low", "High"), na.value = "grey50")
+                      labels = c("Low", "High"), na.value = "grey50")+
+  guides(fill=guide_legend(title="Log. Damage"))+
+  ggtitle('logarithmized Damage in the USA')
+
 
 ```
 
@@ -328,9 +334,9 @@ g <- ggplot(map_dam) +
   #                  labels = c("Low", "High"), na.value = "grey50") +
   hrbrthemes::theme_ipsum() +
   colormap::scale_fill_colormap(
-    colormap=colormap::colormaps$copper, reverse = T) +
-  labs(title='Internet Usage in Africa in 2015', subtitle='As Percent of Population',
-       caption='Source: World Bank Open Data.')
+    colormap=colormap::colormaps$hot, reverse = T) +
+  labs(title='Log. Damage in the USA',
+       caption='Source: FEMA.')
 
 widgetframe::frameWidget(ggiraph(code=print(g)))
 ```
@@ -388,12 +394,6 @@ summary(diff_approved$difference)
 ```
 
 ```{r}
-hist.df <- data.frame(Damage = df.prep.5$Damage,
-                      Approved = df.prep.5$Approved)
-summary(hist.df)
-```
-
-```{r}
  hist.df %>% 
       pivot_longer(everything()) %>%
       ggplot(aes(x = value, fill = name)) +
@@ -422,16 +422,27 @@ boxplot.approved.num <- boxplot.approved.df %>%
 b.app.inf <- boxplot.approved.df %>%
   pivot_longer(Damage:Approved, names_to = "Names", values_to = "values") %>%
   ggplot(aes(y = values, x = Type, fill = Names))+
-  geom_boxplot()
+  geom_boxplot()+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  labs(fill = "")
 
 b.app <- boxplot.approved.num %>%
   pivot_longer(Damage:Approved, names_to = "Names", values_to = "values") %>%
   ggplot(aes(y = values, x = Type, fill = Names))+
-  geom_boxplot()
+  geom_boxplot()+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  labs(fill = "")
+
+label_size <- 10  # set the size of the labels
+
+label_top <- "<span style='font-size: {size}px;'>With Infinite Numbers</span>"
+label_bottom <- "<span style='font-size: {size}px;'>Without Infinite Numbers</span>"
 
 ggarrange(b.app.inf, b.app, 
           labels = c("With Infinite Numbers", "Without Infinite Number"),
+          font.label = list(size = 10), hjust = -0.1,
           ncol = 1, nrow = 2)
+
 ```
 
 ### Approved and actually used (repair)
@@ -475,7 +486,7 @@ b.rep.inf <- boxplot.repair.num.df %>%
   facet_wrap(~Type, scale="free")+
   ggtitle('Approved and Repair Amount logarthmized without Inf Rows')
 b.rep.inf + theme(
-  plot.title = element_text(size=18, face="bold.italic"),
+  plot.title = element_text(size=12, face="bold.italic"),
   axis.text.x=element_blank())
 
 
@@ -487,20 +498,18 @@ b.rep <- boxplot.repair.df %>%
   ggtitle('Approved and Repair Amount logarthmized with Inf Rows')
 b.rep+
   theme(
-  plot.title = element_text(color = 'red',size=18, face="bold.italic"),
+  plot.title = element_text(color = 'red',size=12, face="bold.italic"),
   axis.text.x=element_blank())
 # ggarrange(b.rep.inf, b.rep, 
 #           labels = c("With Infinite Numbers", "Without Infinite Number"),
 #           ncol = 1, nrow = 2)
 ```
 
-### Frequency of Disaster Types by Country
-
 ```{r}
-# df.group.states <- df.prep.5 %>% group_by(County, State)  %>%
-#                     summarise(NumberDisaster = count(Type),
-#                               .groups = 'drop')
+
 ```
+
+### Frequency of Disaster Types by Country
 
 ```{r}
 DF2 <- df.prep.5 %>%
@@ -510,7 +519,8 @@ df.group.county <- df.prep.5 %>%
   group_by(County, State, Type) %>% 
   summarize(number_sightings = n())
 
-df.county.2 <- left_join(df.group.county, DF2, by = c("County", "State"))
+df.county.2 <- left_join(df.group.county, DF2, by = c("County", "State")) %>%
+  rename(state = State)
 
 df.county.2 <- df.county.2[!duplicated(df.county.2), ]
 
@@ -530,6 +540,20 @@ plot_usmap(data = df.county.2, values = "number_sightings", color = "red") +
   scale_fill_continuous(
     low = "white", high = "red", name = "Number of Sightings", label = scales::comma
   ) + theme(legend.position = "right")
+```
+
+```{r}
+plot_usmap(data = df.county.2, values = "number_sightings", color = "red") + 
+  scale_fill_continuous(
+    low = "blue", high = "red", name = "Number of Sightings", label = scales::comma
+  ) + theme(legend.position = "right") +
+  facet_wrap(~ Type, ncol = 2)
+
+plot_usmap(data = df.county.2, values = "number_sightings", color = "red", include = c("all")) + 
+  scale_fill_continuous(
+    low = "blue", high = "red", name = "Number of Sightings", label = scales::comma
+  ) + theme(legend.position = "right") +
+  facet_wrap(~ Type, ncol = 2)
 ```
 
 ## Model
@@ -573,6 +597,132 @@ model <- lm(Damage ~ Population + State, data = df.group.damage)
 summary(model)
 ```
 
+## Model 2
+
+In this Chapter we want to see, if the amount of Damage can be predicted
+with the given data points.
+
+**H1:** *With a higher income per capita, the damage will be lower.*
+
+The reason being, that with higher income capita, the preparation and
+precaution for natural disaster are higher. For one, there is no
+monetary strain like in other counties with less income per capita.
+
+**H2:** The damage will be lower, depending which natural catastrophe is
+happening.
+
+First, we will need to see the distribution of the important variables.
+It appears, that damage and income per capita needs to be logarithmized.
+So we logarithimized it.
+
+The scatter plot indicates that there is a positive relationship between
+income per capita and damage.
+
+To see if the chosen variables have an influence on damage a testing was
+done (*drop1*). The model.full indicates that only log.income, Type and
+Duration have relevant effects on the dependent variable damage.
+
+```{r}
+ggplot(data = df.prep.5, 
+       mapping = aes(x = log(Damage), fill = '')) +
+  geom_histogram(show.legend = FALSE)+
+  labs(x = 'Damage (log)', y = 'Count') +
+  scale_fill_manual(values = c('mistyrose3'))+
+  theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=18,face="bold"))
+```
+
+```{r}
+ggplot(data = df.prep.5, 
+       mapping = aes(x = IncomeCapita, fill = '')) +
+  geom_histogram(show.legend = FALSE)+
+  labs(x = 'Income', y = 'Count') +
+  scale_fill_manual(values = c('lightblue2'))+
+  theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=18,face="bold"))
+```
+
+```{r}
+ggplot(data = df.prep.5, 
+       mapping = aes(x = log(IncomeCapita), fill = '')) +
+  geom_histogram(show.legend = FALSE)+
+  labs(x = 'log. Income', y = 'Count') +
+  scale_fill_manual(values = c('mistyrose3'))+
+  theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=18,face="bold"))
+```
+
+```{r}
+plot(df.prep.5$Damage, df.prep.5$IncomeCapita)
+plot(log(df.prep.5$Damage), log(df.prep.5$IncomeCapita))
+
+ggplot(df.prep.5, aes(log(IncomeCapita),log(Damage))) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE)
+```
+
+### Linear Regression
+
+```{r}
+df.model <- df.prep.5
+df.model$log.damage <- log(df.model$Damage)
+df.model$log.income <- log(df.model$IncomeCapita)
+# 
+df.model <- df.model[!is.na(df.model$log.damage) & is.finite(df.model$log.damage), ]
+# 
+model <- lm(log.damage ~ log.income, data = na.omit(df.model))
+summary(model)
+
+```
+
+```{r}
+model.full <- lm(log.damage ~ log.income + State+ Type+ Population+ Duration, data = na.omit(df.model))
+summary(model.full)
+```
+
+```{r}
+drop1(model.full, test = 'F')
+```
+
+```{r}
+model.right <- lm(log.damage ~ log.income +  Type+ Duration, data = na.omit(df.model))
+summary(model.right)
+```
+
+### Fitted Values
+
+```{r}
+fitted.model <- fitted(model)
+str(fitted.model)
+plot(log.damage ~ log.income, data = df.model,
+     main = "Model 'model'",
+     col = "pink4")
+points(fitted.model ~ log.income,
+       col = "lightblue4",
+       pch = 19,
+       data = df.model)
+abline(model, col = "red4")
+```
+
+```{r}
+df.sub <- df.model[which(!is.na(fitted.model)), ]
+# Create plot with both observed and fitted values
+plot(log.damage ~ log.income, data = df.sub,
+     main = "Model 'model'",
+     col = "pink4")
+points(fitted.model ~ log.income,
+       col = "lightblue4",
+       pch = 19,
+       data = df.sub)
+abline(model, col = "red4")
+# df.plot <- data.frame(log.damage = df.model$log.damage, log.income = df.model$log.income, fitted = fitted.model)
+# 
+# # Plot the observed and fitted values
+# plot(log.damage ~ log.income, data = df.plot, main = "Model 'model'", col = "pink4")
+# points(fitted ~ log.income, data = df.plot, col = "lightblue4", pch = 19)
+# abline(model, col = "red4")
+```
+
 ## Chapter of choice
 
 For the chapter of choice we have chosen the shiny dashboard
@@ -581,7 +731,10 @@ interactive for users. \@ MARTINA: in the folder shiny there are the
 first tries
 
 For every analysis some kind of outlier detection is a way to see if the
-data has some structure.
+data has some structure. The way this works, multiple variables are
+given and from these groups are being formed. The goal is to have big
+differences between the formed groups. However, within group difference
+should be small.
 
 ```{r}
 #Dataframe
@@ -636,6 +789,7 @@ reps <- rep(0, 6)
 for (i in 1:6) reps[i] <- sum(kmeans(datas, centers = i, nstart = 20)$withinss)
 par(mfrow = c(1,1))
 plot(1:6, reps, type = "b", xlab = "Number of groups", ylab = "Sum of squares")
+text(3, 120, "Elbow point signifies how many \ngroups there could be", col = "red", cex = 1.08, pos = 4)
 ```
 
 ```{r}
@@ -652,8 +806,8 @@ plot(datas, pch = groups_km2, col=groups_km2, lwd=2)
 legend("topright", legend = 1:2, pch = 1:2, col=1:2, bty="n")
 ```
 
-```{r}
-plot(silhouette(groups_km2, dists))
+```{r, fig.align = "left", fig.asp = 1.2, fig.width = 5}
+plot(silhouette(groups_km, dists), color='red3')
 ```
 
 ```{r}
